<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nasa_image_title">Decorating the Sky</string>
    <string name="nasa_image_description">This mosaic image taken by NASA\’s Wide-field
Infrared Survey Explorer, or WISE, features
three nebulae that are part of the giant Orion
Molecular Cloud--the Flame nebula, the Horsehead
nebula and NGC 2023. Despite its name, there isThis mosaic image taken by NASA\’s Wide-field
Infrared Survey Explorer, or WISE, features
three nebulae that are part of the giant Orion
Molecular Cloud--the Flame nebula, the Horsehead
nebula and NGC 2023. Despite its name, there isThis mosaic image taken by NASA\’s Wide-field
Infrared Survey Explorer, or WISE, features
three nebulae that are part of the giant Orion
Molecular Cloud--the Flame nebula, the Horsehead
nebula and NGC 2023. Despite its name, there is</string>
    <string name="nasa_image_date">Mon, 27 Dec 2010 00:00:00 EST</string>
   <!--  <string name="app_name">Nasa RSS Feed</string> -->
    <string name="app_name">Select Examples</string>
    <string name="refresh">Refresh</string>
    <string name="setwallpaper">Set Wallpaper</string>
    <string name="time_label">Time</string>
    <string name="notes_label">Notes</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="add_label">Add</string>
    <string name="description_pending">description pending</string>

</resources>