<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/image_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/image_title_color"
                android:text="@string/nasa_image_title" />

            <TextView
                android:id="@+id/image_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="@string/nasa_image_date" />

            <ImageView
                android:id="@+id/nasa_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/nasa_image" />

            <TextView
                android:id="@+id/image_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.28"
                android:text="@string/nasa_image_description" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ff8D8D8D"
        android:gravity="center_horizontal"
        android:padding="5dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRefresh"
            android:text="@string/refresh" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSetWallpaper"
            android:text="@string/setwallpaper" />
        
    </LinearLayout>

</LinearLayout>